<resources>

    <string name="app_name">Landmark Quiz</string>

    <!-- MainActivity -->
    <string name="AppName">Landmark Quiz</string>
    <string name="Mode1">Play with only manmade landmarks</string>
    <string name="Mode2">All landmarks</string>
    <string name="Highscore">Highscores</string>
    <string name="Information">App information</string>


    <!-- No questions -->
    <string name="NoQuestions">There are no more questions</string>
    <string name="Return">Return to menu</string>


    <!-- information -->
    <string name="AppInfo">super apka stworzone przeze mnie</string>

</resources>
