<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.przemek.picturequiz.activities.MainActivity">

        <TextView
                android:layout_width="wrap_content"
                style="@style/GeneralTextStyle"
                android:layout_height="wrap_content"
                android:id="@+id/AppName"
                android:text="@string/AppName"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/AppNameSize"
                android:layout_marginBottom="@dimen/AppName_Vertical_margin"
                android:layout_marginTop="@dimen/AppName_Vertical_margin"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonLayout"
                android:layout_below="@+id/AppName"
                android:orientation="horizontal">

            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/LeftButton"
                    style="@style/LinearLayoutButtonStyle"
                    android:text="@string/Mode1"
                    android:layout_marginBottom="@dimen/Vertical_margin"
                    android:layout_marginTop="@dimen/Vertical_margin"
                    android:onClick="manMadeOnly"
            />

            <Button
                    android:id="@+id/RightButton"
                    style="@style/LinearLayoutButtonStyle"
                    android:text="@string/Mode2"
                    android:layout_marginBottom="@dimen/Vertical_margin"
                    android:layout_marginTop="@dimen/Vertical_margin"
                    android:onClick="allLandmarks"
            />
        </LinearLayout>

        <Button
                android:id="@+id/HighscoreButton"
                android:layout_below="@+id/ButtonLayout"
                style="@style/RelativeLayoutButtonStyle"
                android:text="@string/Highscore"
                android:layout_marginBottom="@dimen/Vertical_margin"
        />

        <Button
                android:id="@+id/InformationButton"
                android:layout_below="@+id/HighscoreButton"
                style="@style/RelativeLayoutButtonStyle"
                android:text="@string/Information"
                android:onClick="information"
        />

    </RelativeLayout>

