<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_no_questions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.przemek.picturequiz.activities.MainActivity">

        <TextView
                style="@style/RelativeLayoutButtonStyle"
                android:id="@+id/no_questions_announcement"
                android:text="@string/NoQuestions"
                android:layout_marginBottom="@dimen/Vertical_margin"
                android:layout_marginTop="@dimen/Vertical_margin"
                />

        <Button
                android:id="@+id/HighscoreButton"
                android:layout_below="@+id/no_questions_announcement"
                style="@style/RelativeLayoutButtonStyle"
                android:text="@string/Highscore"
                android:layout_marginBottom="@dimen/Vertical_margin"
        />

        <Button
                android:id="@+id/ReturnButton"
                android:layout_below="@+id/HighscoreButton"
                style="@style/RelativeLayoutButtonStyle"
                android:text="@string/Return"
                android:onClick="returnToMenu"
        />

    </RelativeLayout>

</ScrollView>

